--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <section class="home" id="home">
     <h3>HI THERE !</h3>
     <h1>I'M <span>AMANDEEP SINGH</span></h1>
-    <p>Hello! my name is Amandeep singh, natively from <u>Banda</u> uttar pradesh and currently residing in Delhi.I've recently cpmpleted post graduation in Masters of Computer Application (m.c.a-2021-23) with 8.43 cgpa from kamla nehru institute of technology sultanpur (u.p.). Proficient in programming languages like Html/css/javascript and also have expertise in python, c/c++ and basics of Core java.Intrested in web development and latest technology trends.softskills including communication, leadership, motivated, good listener and problem solving. I actively seek opportunities to expand my knowledge and skills through continuous learning and professional development I'm ready to contribute to the company's success.</p>
+    <p>Hello! my name is Amandeep singh, natively from <u>Banda</u> uttar pradesh and currently residing in Delhi.I've recently completed post graduation in Masters of Computer Application (m.c.a-2021-23) with 8.43 cgpa from kamla nehru institute of technology sultanpur (u.p.). Proficient in programming languages like Html/css/javascript, also have expertise in python, c/c++ and basics of Core java.Intrested in web development and latest technology trends. softskills including communication, leadership, self-motivated, a good listener and problem solving capability. I actively seek opportunities to expand my knowledge and skills through continuous learning and professional development. I'm ready to contribute to the company's success.</p>
     <a href="#about"><button class="btn">about me<i class="fas fa-user"></i></button></a>    
 </section>
 <!--HOme section ends-->
@@ -174,7 +174,7 @@
         <div class="info">
             <h3> <i class="fas fa-envelope"></i> kushaman5044@gmail.com</h3>
             <h3> <i class="fas fa-phone"></i> +91 7071284501</h3>
-            <h3> <i class="fa-solid fa-location-dot"></i> new Ashok nagar chilla-110096.</h3>
+            <h3> <i class="fa-solid fa-location-dot"></i> new Ashok nagar chilla, Delhi-110096.</h3>
             <h3> <i class="fa-brands fa-linkedin"></i></i><a href="//www.linkedin.com/in/amandeep5044/" class="btn">linkedin</a></h3>
             <h3> <i class="fa-brands fa-github"></i></i></i><a href="https://github.com/amandeep04111999" class="btn">Github</a></h3>
         </div>
